Added task data for solved tasks

--- a/Task3/Task3.csproj
+++ b/Task3/Task3.csproj
@@ -47,6 +47,11 @@
       <Name>Utilities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="TaskFiles\D_Area.png" />
+    <Content Include="TaskFiles\TaskDefinition.png" />
+    <Content Include="TaskFiles\UFunction.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
