--- a/Task4/Task4.csproj
+++ b/Task4/Task4.csproj
@@ -47,6 +47,10 @@
       <Name>Utilities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="TaskFiles\TaskDefinition.png" />
+    <Content Include="TaskFiles\InfiniteSumFormula.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
