- Fixed big with too big accuracy - Added needed tests

--- a/TestsForTasks/TestsForTasks.csproj
+++ b/TestsForTasks/TestsForTasks.csproj
@@ -44,12 +44,17 @@
   <ItemGroup>
     <Compile Include="Task3Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Task4Tests.cs" />
     <Compile Include="Task6Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Task3\Task3.csproj">
       <Project>{f2c8a499-108a-485d-992f-c6286b680234}</Project>
       <Name>Task3</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Task4\Task4.csproj">
+      <Project>{3ab87a11-1a49-489b-95bb-726540d0a8af}</Project>
+      <Name>Task4</Name>
     </ProjectReference>
     <ProjectReference Include="..\Task6\Task6.csproj">
       <Project>{bdc13016-9ad7-4551-93c5-c30225054b32}</Project>
