# Task3 - minor code refactoring # Task4 - minor code refactoring # Tests - updated tests for task 3 and 4 to work with dot coder

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Task3\Task3.csproj" />
+      <ProjectReference Include="..\Task4\Task4.csproj" />
     </ItemGroup>
 
 </Project>
