--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Task3\Task3.csproj" />
       <ProjectReference Include="..\Task4\Task4.csproj" />
+      <ProjectReference Include="..\Task5\Task5.csproj" />
     </ItemGroup>
 
 </Project>
