# Task11 -Added one more keyMatrix for testing

--- a/Task11/Task11.csproj
+++ b/Task11/Task11.csproj
@@ -47,6 +47,7 @@
     <Content Include="TestingData\encodedMessage.txt" />
     <Content Include="TestingData\keyMatrix.txt" />
     <Content Include="TestingData\messageToEncode.txt" />
+    <Content Include="TestingData\newKeyMatrix.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
